--- a/src/Components/Analytics/Analytics.module.css
+++ b/src/Components/Analytics/Analytics.module.css
@@ -1,5 +1,5 @@
 .maincontainer{
-    width: 90%;
+    width: 60rem;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -19,16 +19,20 @@
 
 .maincontainer .detailheading{
     display: flex;
-    width: 95%;
+    width: 50rem;
     height: 10%;
     border-radius: 10px;
+    align-items: center;
     background-color: #5076FF;
 }
 
 .maincontainer .detailheading h3{
     margin: 0px;
     color: #FFF;
-    margin-left: 2rem;
+    font-size: 1.1rem;
+    font-weight: 400;
+    margin-left: 1rem;
+    text-align: center;
 }
 
 .maincontainer .detailheading h3:nth-child(1){
@@ -45,9 +49,9 @@
 }
 .maincontainer .detailvalue{
     display: flex;
-    width: 95%;
+    width: 50rem;
     height: 10%;
-    align-items: center;   
+    align-items: center;
     margin-top: 8px;
 }
 
@@ -58,9 +62,9 @@
 
 .maincontainer .detailvalue > *{
     margin: 0;
-    font-size: 1.2rem;
-    margin-left: 2rem;
-    font-weight: 500;
+    font-size: 1.1rem;
+    margin-left: 1rem;
+    font-weight: 400;
     color: #000;
     text-align: center;
 }
@@ -91,7 +95,7 @@
 }
 
 .deletecontainer .deletecard{
-    width: 50%;
+    width: 48rem;
     border-radius: 10px;
     height: 50%;
     background: #FFF;
