--- a/src/Components/Createquiz/Createquiz.module.css
+++ b/src/Components/Createquiz/Createquiz.module.css
@@ -3,6 +3,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.81);
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
     display: flex;
 }
