--- a/src/Components/Dashboard/Dashboard.module.css
+++ b/src/Components/Dashboard/Dashboard.module.css
@@ -1,5 +1,5 @@
 .maincontainer{
-    width: 80%;
+    width: 60rem;
     height: 80%;
 }
 
@@ -7,7 +7,7 @@
     width: 100%;
     height: 30%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .maincontainer .quizdetailcards > div{
@@ -33,17 +33,18 @@
 .maincontainer .trendingquizcards{
     width: 100%;
     height: 50%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap:8px;
     overflow: auto;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .maincontainer .trendingquizcards > div{
-    width:25%;
-    height: 23%;
-    margin: 1rem 1rem;
+    height: 80%;
+    /* margin-left: 1rem; */
     border-radius: 5px;
+    padding: 8px;
     background-color: #FFFFFF;
 }
 
@@ -55,13 +56,13 @@
 .maincontainer .trendingquizcards > div > div > h3:first-child{
     font-size: 1.5rem;
     margin: 0px;
-    margin-left: 8px;
+    /* margin-left: 8px; */
 }
 
 .maincontainer .trendingquizcards > div > div > h3:nth-child(2){
     color: #FF5D01;
     margin: 0px;
-    margin-right: 8px;
+    /* margin-right: 8px; */
 }
 
 .maincontainer .trendingquizcards > div > div > h3:nth-child(2) > img{
@@ -70,6 +71,6 @@
 .maincontainer .trendingquizcards > div > h3{
     margin: 0px;
     font-size: 1rem;
-    margin-left: 8px;
+    /* margin-left: 8px; */
     color: #60B84B;
 }
