--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -28,13 +28,26 @@
     font-weight: 400;
 }
 
-.leftcontainer > div h3{
+.leftcontainer > div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.leftcontainer > div > div{
     margin-bottom: 4rem;
     cursor: pointer;
+    text-align: center;
+    width: 90%;
 }
-
+.leftcontainer .line{
+    border-top: 1px solid black;
+    margin: 0px;
+    width: 80%;
+}
 .leftcontainer h2{
     cursor: pointer;
+    margin-top: 0px;
 }
 
 .rightcontainer{
