--- a/src/Components/Quizcard1/Quizcard1.module.css
+++ b/src/Components/Quizcard1/Quizcard1.module.css
@@ -3,10 +3,11 @@
     border-radius: 10px;
     border: none;
     background: #FFF;
-    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
     font-family: Poppins;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
+    transition-duration: 0.4s;
 }
 .maincontainer button{
     cursor: pointer;
@@ -17,20 +18,20 @@
 }
 
 .maincontainer{
-    width: 50%;
-    height: 50%;
+    width: 35%;
+    height: 40%;
     margin: auto;
     border-radius: 10px;
     background: #FFF;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     color: #9F9F9F;
 }
 
 .maincontainer input{
-    width: 60%;
+    width: 80%;
     height: 15%;
     padding-left: 8px;
 }
@@ -39,7 +40,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 30rem;
+    width: 80%;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    /* background-color: #60B84B; */
 }
 
 /* .maincontainer  */
@@ -48,14 +52,25 @@
     width: 8rem;
     background: #FFF;
 }
-
+.maincontainer .quiztypebttn button:hover{
+    background: #60B84B;
+}
+.maincontainer .quiztypebttn h3{
+    font-size: 1rem;
+    color: black;
+    font-weight: 400;
+}
 .maincontainer .continuebttn{
     display: flex;
-    width: 22rem;
+    width: 80%;
     justify-content: space-between;
 }
 
 .maincontainer .continuebttn button{
-    width: 10rem;
+    width: 47%;
     height: 2rem;
+}
+
+.maincontainer .continuebttn button:first-child:hover{
+    background-color: lightgray;
 }
