--- a/src/Components/Quizcard2/Quizcard2.module.css
+++ b/src/Components/Quizcard2/Quizcard2.module.css
@@ -5,7 +5,7 @@
     background: #FFF;
     font-family: Poppins;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
     box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -33,8 +33,8 @@
 }
 
 .maincontainer{
-    width: 50%;
-    height: 80%;
+    width: 40rem;
+    height: 30rem;
     border-radius: 10px;
     background: #FFF;
     margin: auto;
@@ -42,34 +42,43 @@
     flex-direction: column;
     color: #9F9F9F;
     align-items: center;
+    position: relative;
 }
 
 .maincontainer .questionclass{
     display: flex;
-    width: 100%;
-    justify-content: space-around;
+    width: 80%;
+    justify-content: space-between;
     align-items: center;
+    margin-top: 2rem;
+    /* background-color: yellow; */
 }
 
 .maincontainer .questionclass .questionnumbercontainer{
     display: flex;
     align-items: center;
-    padding-left: 1rem;
 }
 
+.maincontainer .questionclass h4{
+    font-size: 1rem;
+    font-weight: 400;
+}
 .maincontainer .questionclass .questionnumbercontainer > img{
     margin-top: 1rem;
     cursor: pointer;
+    height: 2rem;
 }
 
 .maincontainer .questionclass .questionnumbercontainer .questionnumber{
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 100%;
     background-color: #FFF;
-    margin-left: 8px;
     filter: drop-shadow(0px 0px 10px rgba(150, 66, 66, 0.15));
     display: flex;
+    font-weight: 400;
+    font-size: 1rem;
+    margin-right: 5px;
     justify-content: center;
     align-items: center;
 }
@@ -86,34 +95,40 @@
 }
 .maincontainer input{
     width: 80%;
-    margin-top: 8px;
     padding-left: 8px;
-    height: 3rem;
+    height: 2.5rem;
 }
 
 .maincontainer .optiontype{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 40rem;
+    width: 80%;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
+.maincontainer .optiontype h4{
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0px;
+}
 
+.maincontainer .optiontype div label{
+    font-size: 1rem;
+}
 .maincontainer .optioncontainer{
     display: flex;
     flex-direction: column;
-    width: 45rem;
-    height: 15rem;
+    width: 80%;
+    height: 12rem;
 }
 
 .maincontainer .optioncontainer button{
     color: inherit;
-    width: 10rem;
-    padding-top:8px;
-    padding-bottom: 8px;
-    margin-left: 2.5rem;
+    width: 13rem;
+    height: 2rem;
     margin-top: 8px;
-    font-weight: inherit;
 }
 
 .maincontainer .optioncontainer .option{
@@ -125,38 +140,47 @@
     margin-left: 8px;
     width: 10rem;
     height: 2rem;
+    margin-bottom: 8px;
     margin-right: 8px;
 }
 
 .maincontainer .optioncontainer .option img{
     cursor: pointer;
-    margin-top: 8px;
 }
 
 .maincontainer .timer{
     position: absolute;
-    top:20rem;
-    left: 60rem;
+    top:14rem;
+    left: 35rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
+.maincontainer .timer h4{
+    margin: 0px;
+}
 .maincontainer .timer button{
-    width: 5rem;
+    width: 4rem;
     color: inherit;
     margin-top: 8px;
 }
 
 .maincontainer .createquiz{
     display: flex;
-    width: 30rem;
+    width: 80%;
     justify-content: space-between;
     margin-top: 1rem;
 }
 
 .maincontainer .createquiz button{
-    padding: 8px 4rem;
-    color: #474444;
+    width: 14rem;
+    height: 2rem;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
+    color: black
+}
+
+.maincontainer .createquiz button:first-child:hover{
+    background-color: lightgray;
 }
